styles: Keep top of phone in focus on small vertical screens. Prevent hero clipping when vertical viewport is smaller than 650px.

--- a/resources/assets/sass/homepage.scss
+++ b/resources/assets/sass/homepage.scss
@@ -30,7 +30,7 @@ body {
 .home-page-hero {
     background-color: #1a1a1a;
     background-image: url('../images/hero-header-small.jpg');
-    background-position: right;
+    background-position: top right;
     background-repeat: no-repeat;
     background-size: cover; 
     height: 600px;
@@ -40,6 +40,7 @@ body {
     @media only screen and (min-width: 700px) {
         background-image: url('../images/hero-header.jpg');
         height: calc(100vh - 80px);
+        min-height: 650px;
     }
 }
 
